[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/input_button/ActionDisplay.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/default.tres" type="Theme" id=2]
[ext_resource path="res://scenes/UI/ActionTutorial.gd" type="Script" id=3]

[node name="ActionTutorial" type="VBoxContainer"]
margin_left = 2400.0
margin_top = -80.0
margin_right = 2520.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TopLabel" type="Label" parent="."]
margin_right = 120.0
margin_bottom = 23.0
text = "Presiona"
align = 1

[node name="Control" type="CenterContainer" parent="."]
margin_top = 27.0
margin_right = 120.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control"]
margin_left = 60.0
margin_top = 23.0
margin_right = 60.0
margin_bottom = 23.0

[node name="ActionDisplay" type="Node2D" parent="Control/Control"]
script = ExtResource( 1 )
key_code = -1
action = "jump"

[node name="BottomLabel" type="Label" parent="."]
margin_top = 77.0
margin_right = 120.0
margin_bottom = 100.0
text = "para saltar"
align = 1
